# Rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/analytics-service/: Cargo.toml
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: main.rs
apps/api-gateway/src/config/: mod.rs
apps/api-gateway/src/middleware/: logging.rs  mod.rs  request_id.rs
apps/api-gateway/src/router/: mod.rs
apps/api-gateway/src/routes/: health.rs
apps/audit-consumer/: Cargo.toml
apps/audit-consumer/src/: main.rs
apps/audit-consumer/src/config/: mod.rs
apps/audit-consumer/src/consumer/: audit_consumer.rs  mod.rs
apps/audit-consumer/src/dispatcher/: event_dispatcher.rs  handler_registry.rs  mod.rs
apps/audit-consumer/src/handler/: audit_handler.rs  event_handler.rs  mod.rs
apps/audit-consumer/src/modules/: audit_module.rs  mod.rs
apps/audit-consumer/src/service/: audit_processing_service.rs  dead_letter_service.rs  mod.rs
apps/audit-service/: Cargo.toml
apps/audit-service/src/: main.rs  router.rs  state.rs
apps/audit-service/src/builders/: event_envelope_builder.rs  mod.rs  outbox_builder.rs
apps/audit-service/src/handlers/: audit_handler.rs  health_handler.rs  metrics_handler.rs  mod.rs  version_handler.rs
apps/audit-service/src/service/: audit_service.rs
apps/embedding-service/: Cargo.toml
apps/llm-gateway/: Cargo.toml
apps/notification-service/: Cargo.toml
apps/outbox-worker/: Cargo.toml
apps/outbox-worker/src/: main.rs
apps/outbox-worker/src/config/: mod.rs
apps/outbox-worker/src/publisher/: kafka_publisher.rs  mod.rs
apps/outbox-worker/src/scheduler/: mod.rs
apps/outbox-worker/src/worker/: mod.rs  outbox_worker.rs
apps/rag-service/: Cargo.toml
apps/workflow-engine/: Cargo.toml
libs/domain/: Cargo.toml
libs/domain/src/: audit_event.rs  lib.rs  outbox_event.rs
libs/domain/src/events/: audit_created.rs  dead_letter_event.rs  event_envelope.rs  event_metadata.rs  event_version.rs  mod.rs  processed_event.rs
libs/event-bus/: Cargo.toml
libs/event-bus/src/: envelope.rs  error.rs  lib.rs  middleware.rs  policy.rs  publisher.rs  retry.rs  subscriber.rs
libs/kafka/: Cargo.toml
libs/kafka/src/: config.rs  consumer.rs  error.rs  event.rs  lib.rs  producer.rs
libs/metrics/: Cargo.toml
libs/metrics/src/: exporter.rs  lib.rs  metrics.rs  middleware.rs
libs/repository/: Cargo.toml
libs/repository/src/: audit_repository.rs  dead_letter_repository.rs  lib.rs  outbox_repository.rs  postgres_repository.rs  processed_event_repository.rs
libs/repository/src/postgres/: audit_repository.rs  mod.rs  outbox_repository.rs  repository.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/: correlation.rs  exporter.rs  lib.rs  logger.rs  metrics.rs  middleware.rs  request_id.rs  tracing.rs
migrations/: 0001_create_audit_events.sql  0002_create_outbox_events.sql  0003_dead_letter.sql  0003_indexes.sql  0004_processed_events.sql  005_dead_letter_events.sql
