[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]


tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum = "0.7"

tower = "0.5"

tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "compression-full"
] }

telemetry = { path = "../../libs/telemetry" }