[package]
name = "audit-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]

domain = { path = "../../libs/domain" }
kafka = { path = "../../libs/kafka" }
common = { path = "../../libs/common" }
telemetry = { path = "../../libs/telemetry" }
event-bus = { path = "../../libs/event-bus" }
repository = { path = "../../libs/repository" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true