[package]
name = "audit-service"
version = "0.1.0"
edition = "2024"


[dependencies]

domain = { path = "../../libs/domain" }
repository = { path = "../../libs/repository" }
telemetry = { path = "../../libs/telemetry" }
event-bus = { path = "../../libs/event-bus" }
metrics = { path = "../../libs/metrics" }

tower.workspace = true

tokio = { workspace = true }

axum = { workspace = true }

serde = { workspace = true }

serde_json = { workspace = true }

uuid = { workspace = true }

chrono = { workspace = true }

tower-http = { workspace = true }

tracing = { workspace = true }

tracing-subscriber = { workspace = true }
sqlx.workspace = true
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

