[package]
name = "outbox-worker"
version = "0.1.0"
edition = "2021"

[dependencies]

domain = { path = "../../libs/domain" }
repository = { path = "../../libs/repository" }
common = { path = "../../libs/common" }
kafka = { path = "../../libs/kafka" }
telemetry = { path = "../../libs/telemetry" }
event-bus = { path = "../../libs/event-bus" }

tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true