[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"


[dependencies]

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true

thiserror = "2"

kafka = { path = "../kafka" }

domain = { path = "../domain" }