[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true