[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow.workspace = true

tokio.workspace = true

axum.workspace = true

tracing.workspace = true

tracing-subscriber.workspace = true

tower.workspace = true

http.workspace = true

once_cell.workspace = true

prometheus.workspace = true

metrics = { path = "../metrics" }